labs/network-policy/allow-externall-access.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
        name: allow-external-access
spec:
        podSelector:
                matchLabels:
                        deployment: hello
        ingress:
                - from:
                        - namespaceSelector:
                                matchLabels:
                                        network.openshift.io/policy-group: ingress
