labs/network-policy/allow-from-network-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
        name: all-from-network-test-project
spec:
        podSelector:
                matchLabels:
                        deployment: hello
        ingress:
        - from:
                - namespaceSelector:      
                        matchLabels:
                                name: network-test
                  podSelector: {}
          ports:
                - port: 8080
                  protocol: TCP
