labs/network-policy/deny-all-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
        name: deny-all
spec:
        podSelector: {}
